Correct typo "avaialble" > "available"

--- a/api/stocks/bulkcandles.mdx
+++ b/api/stocks/bulkcandles.mdx
@@ -182,5 +182,5 @@ func ExampleBulkStockCandlesRequest_get() {
 
 ## Notes
 
-- Only stocks, ETFs, and closed-end funds are available via the bulkcandles endpoint. Mutual fund data is not avaialble via this endpoint.
+- Only stocks, ETFs, and closed-end funds are available via the bulkcandles endpoint. Mutual fund data is not available via this endpoint.
 - The bulkcandles endpoint will consume one request for each symbol returned in the response.
