Update bulkcandles.mdx - typo fix "for for"

--- a/api/stocks/bulkcandles.mdx
+++ b/api/stocks/bulkcandles.mdx
@@ -116,7 +116,7 @@ func ExampleBulkStockCandlesRequest_get() {
   The date of the candles to be returned. If no date is specified, during market hours the candles returned will be from the current session. If the market is closed the candles will be from the most recent session. Accepted date inputs: `ISO 8601`, `unix`, `spreadsheet`.
 
 - **adjustsplits** `boolean`
-  Adjust historical data for for historical splits and reverse splits. Market Data uses the CRSP methodology for adjustment.
+  Adjust historical data for historical splits and reverse splits. Market Data uses the CRSP methodology for adjustment.
   Daily candles default: `true`.
 
 </TabItem>
